variables.Variables.scala.error
Erreur de compilation :
Variables:10: error: '=' expected but ';' found.
while (dejaFait != nbPas) {avance()}                              
^